<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title=" "
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:text="@string/back"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:text="@string/invite_members"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_members"/>
            <TextView
                android:id="@+id/txt_current_memebers_val"
                android:layout_width="wrap_content"
                android:text="83"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"/>
            <TextView
                android:id="@+id/txt_limit_val"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="100"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_members"/>
            <TextView
                android:id="@+id/txt_current_supporters_val"
                android:layout_width="wrap_content"
                android:text="6"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"/>
            <TextView
                android:id="@+id/txt_sup_limit_val"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="20"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/invite_permissions"
        android:layout_marginTop="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sprn_permission_level"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_marginRight="20dp"
        style="?android:attr/spinnerDropDownItemStyle"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/invite_urls_view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/what_are_permissions" />

    <Button
        android:id="@+id/btn_share_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/share_qr_code"/>
    <Button
        android:id="@+id/btn_copy_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        style="@style/TextAppearance.AppCompat.Button"
        android:background="@android:color/black"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/copy_link"/>



</LinearLayout>